--- a/bookit/Views/Book/More.cshtml
+++ b/bookit/Views/Book/More.cshtml
@@ -1,15 +1,16 @@
 ﻿@model bookit.Models.Book
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "More About" + Model.Name;
 }
 
-<h2>Details</h2>
+<h2>@ViewData["Title"]</h2>
 
 <div>
-    <h4>Book</h4>
-    <hr />
-    <img src="@Model.ImagePath" alt="@Model.Name"  class="img-responsive"/>
+    <div class="col-md-2">
+        <img src="@Model.ImagePath" alt="@Model.Name" class="img-responsive" />
+
+    </div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -44,6 +45,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <a asp-action="Gallery">Back to Gallery</a>
 </div>
